# Recruiter.io

./: leetcode_companies.py
.github/workflows/: leetcode-scraper.yml
AutoSuggest/: autosuggest.py  enrichment_db.py  trie.py
JobCrawler/: .env.example  .gitignore  host.json  package-lock.json  package.json
JobCrawler/backend/: server.js
JobCrawler/backend/config/: companies.js  constants.js  db.js
JobCrawler/docs/: privacy-policy.html
JobCrawler/extension/: manifest.json
JobCrawler/scripts/: discover-workday-slugs.js  test-all-companies.js  test-crawlers.js
LeetcodeCompany/: .gitignore  LeetcodeCompany.code-workspace  leetcode_companies.py  leetcode_company_questions.html  leetcode_company_questions.json  leetcode_company_questions.md
LinkedInJobFinder/: .env.example  .gitignore  CLAUDE.md  README.md  job_tracker.csv  pyproject.toml
LinkedInJobFinder/config/: targets.yaml
LinkedInJobFinder/infra/: deploy.sh  main.bicep  startup.sh
LinkedInJobFinder/resumes/: README.md
LinkedInJobFinder/scripts/: install_launchd.sh  uninstall_launchd.sh
LinkedInJobFinder/src/linkedin_finder/: __init__.py  blob_reader.py  blob_sync.py  cli.py  config.py  csv_mirror.py  daily.py  db.py  drafting.py  ranking.py  resume.py
LinkedInJobFinder/src/linkedin_finder/discovery/: jobs.py  linkedin_session.py  posts.py  recruiters.py
LinkedInJobFinder/src/linkedin_finder/prompts/: draft_peer.md  draft_recruiter.md  rank.md
LinkedInJobFinder/src/linkedin_finder/ui/: app.py
LinkedInJobFinder/tests/: test_blob_sync.py  test_csv_mirror.py  test_drafting.py  test_resume.py
(+696 files in other folders)
