[project]
name = "linkedin-finder"
version = "0.1.0"
description = "Local LinkedIn job-finder + recruiter outreach drafter"
requires-python = ">=3.11"
dependencies = [
  "python-jobspy>=1.1.70",
  "playwright>=1.47",
  "azure-ai-inference>=1.0.0b6",
  "azure-core>=1.30",
  "streamlit>=1.36",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "pdfplumber>=0.11",
  "python-docx>=1.1",
  "pandas>=2.2",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
linkedin-finder = "linkedin_finder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linkedin_finder"]
